--- a/about.yml
+++ b/about.yml
@@ -1,15 +1,13 @@
 ---
-name: Ilona Maskova # ваше имя
+name: Maksim Uralskiy
 job: QA Engineer
 level: junior
-email: ilona@hexlet.io
+email: ural166@mail.ru
 description: |
-  Это текст-описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя
-
-  Текст может быть написан в несколько абзацев
+  Начал обучение на курсе Инженер по тестированию на Hexlet в мае 2023 года
+  Планирую по завершению обучения найти хорошу работу с возмоностью карьерного роста
+  хочу на удалёнку)
 skills:
-  - функциональное тестирование
-  - написание багрепортов
-  - Linux
-  - слепая печать
-  - английский язык C1
+  - Основы верстки (HTML, CSS)
+  - Ручное тестирование
+  - написание баг-репортов
