--- a/requirements.yml
+++ b/requirements.yml
@@ -1,10 +1,19 @@
 ---
 functional:
-  - требование 1
-  - требование 2
+  - Пользователь должен иметь возможность фильтровать товары
+  - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
+  - Пользователь должен иметь возможность искать товары по ключевому слову или категории
+  - Пользователь должен иметь возможность фильтровать товары
 non-functional:
-  - требование 3
-  - требование 4
+  - Сайт должен быть доступен на различных устройствах
+  - Сайт должен иметь мобильную версию
+  - Сайт должен быть способен обрабатывать большое количество трафика
+  - Сайт должен быть безопасным и защищать данные пользователя.
+  - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
 implicit:
-  - требование 5
-  - требование 6
+  - Фильтр цены не должен принимать отрицательные значения
+  - Все кнопки "В корзину" должны иметь одинаковый размер
+  - При нажатии на кнопки "Следующая" и "Предыдущая" в нижней части тела страницы, страница должна возвращаться наверх
+  - На сайте долна присутсвовать кнопка сброса всех фильтров поиска
+  - Старая, новая цена и колличество товара не должны быть записаны в одну строчку
