--- a/requirements.yml
+++ b/requirements.yml
@@ -15,5 +15,5 @@ implicit:
   - Фильтр цены не должен принимать отрицательные значения
   - Все кнопки "В корзину" должны иметь одинаковый размер
   - При нажатии на кнопки "Следующая" и "Предыдущая" в нижней части тела страницы, страница должна возвращаться наверх
-  - На сайте долна присутсвовать кнопка сброса всех фильтров поиска
-  - Старая, новая цена и колличество товара не должны быть записаны в одну строчку
+  - На сайте должна присутсвовать кнопка сброса всех фильтров поиска
+  - Старая, новая цена и колличество товара не должны быть записаны в одну строчку при просмотре списка товаров
