--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,17 +1,14 @@
 ---
 - summary: |
-    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+    Проверка смены языковой версии сайта
   requirement: |
-    Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
+    При выборе языка сайт должен отобрааться на выбранном языке
   prerequisites: |
-    Это условия, которые необходимы для проведения тест кейса. Они должны быть выполнены еще до запуска тест кейса.
-    Например: открыта страница логина
+    Открыта начальная страница сайта
   test-data: |
-    Тестовые данные
-    Логин = ilona Пароль = password
+    Изначально сайт открывается на Английском языке
   steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку "Войти"
+    - Открываем выпадающий список языков "Language" в правом верхнем углу шапки сайта
+    - Выбираем язык "Russian"
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Сайт должен отобразиться на Русской версии 
