--- a/test-cases.yml
+++ b/test-cases.yml
@@ -2,7 +2,7 @@
 - summary: |
     Проверка смены языковой версии сайта
   requirement: |
-    При выборе языка сайт должен отобрааться на выбранном языке
+    При выборе языка сайт должен отображаться на выбранном языке
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -12,3 +12,70 @@
     - Выбираем язык "Russian"
   expected-result: |
     Сайт должен отобразиться на Русской версии 
+
+- summary: |
+    Проверка фильтрации по ключевому слову
+  requirement: |
+    При вводе ключевого слова в поле поиска должны отображаться позиции товаров в названии которых присутствует запрос поиска
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    ключевое слово = tr
+  steps:
+    - В поле поиска вводим текст поиска
+  expected-result: |
+    Сайт должен отфильтровать товар по поисковому запросу в выбранной категории и выдать позиции товара которые содержат поисковый запрос
+
+- summary: |
+    Проверка фильтрации товара по бренду
+  requirement: |
+    При выборе бренда для фильтрации поиска сайт должен отобразить все товары бренда в выбранной категории
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    Бренд = Hemani Tea
+  steps:
+    - Выираем бренд
+  expected-result: |
+    Сайт должен отобразить все товары бренда
+
+- summary: |
+    Проверка фильтрации товара по нескольким брендам
+  requirement: |
+    При выборе нескольких рендов для фильтрации поиска сайт должен отобразить все товары брендов в выбранной категории
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    Бренды = Hemani Tea, Apple, Golden
+  steps:
+    - Выираем бренды
+  expected-result: |
+    Сайт должен отобразить все товары бренда
+
+- summary: |
+    Проверка фильтрации товара по ценовому диапазону
+  requirement: |
+    При установлении границ цены сайт должен отфильтровать все товары входящие в диапазон указанных значений в выбранной категории
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    цена от = 20 цена до = 50
+  steps:
+    - Вводим цену от
+    - Вводим цену до
+  expected-result: |
+    Сайт должен отобразить все товары в выбранном диапазоне значений цены в выбранной категории
+
+- summary: |
+    Добавление товара в корзину
+  requirement: |
+    При выборе товара товар должен добавляться в корзину 
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Выбираем товар из списка
+    - Нажимаем кнопку "В корзину"
+  expected-result: |
+    Рядом с корзиной должно отобразиться общее колличество добавленного товара
