--- a/requirements.yml
+++ b/requirements.yml
@@ -13,8 +13,9 @@ non-functional:
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
 implicit:
   - Фильтр цены не должен принимать отрицательные значения
-  - Все кнопки "В корзину" должны иметь фиксированный размер
+  - На сайте должна присутствовать возможность регистрации новых пользователей 
+  - На сайте должна присутствовать возможность авторизации пользователей
   - При нажатии на кнопки "Следующая" и "Предыдущая" в нижней части тела страницы, страница должна возвращаться наверх
   - На сайте должна присутсвовать кнопка сброса всех фильтров поиска
-  - Старая, новая цена и колличество товара не должны быть записаны в одну строчку при просмотре списка товаров
-  - При выборе языка не должен изменяться курсор мыши
+  - После очистки корзины сайт не должен возвращать кэшированые данные с сервера после обновления страницы корзины
+  - После успешного оформления заказа корзина должна очищаться
