--- a/test-cases.yml
+++ b/test-cases.yml
@@ -77,5 +77,102 @@
   steps:
     - Выбираем товар из списка
     - Нажимаем кнопку "В корзину"
+    - Переходим в корзину
   expected-result: |
-    Рядом с корзиной должно отобразиться общее колличество добавленного товара
+    Добавленный товар должен отобразиться в корзине, должны увидеть название товара, колличество на складе, колличество добавленного товара, старую цену, кнопку "Удалить", новая цена
+
+- summary: |
+    Добавление нескольких позиций товаров в корзину
+  requirement: |
+    При выборе нескольких позиций товара товар должен добавляться в корзину 
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Выбираем несколько позиций товаров из списка
+    - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
+    - Переходим в корзину
+  expected-result: |
+    Добавленный товар должен отобразиться в корзине, должны увидеть название товара, колличество на складе, колличество добавленного товара, старую цену, кнопку "Удалить", новая цена. Каждая позиция товара в новой строчке списка
+
+- summary: |
+    Проверка удаления позиции товара в корзине
+  requirement: |
+    При удалении позиции товара из корзины товар опропадёт из нашего заказа, а содержимое корзины обновится оставив только те товары которые остались в нашем заказе
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Выбираем несколько позиций товаров
+    - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
+    - переходим к корзину
+    - Нажимаем кнопку "Удалить" у любой позиции
+  expected-result: |
+    Выбранный товар удалится из корзины, список товаров в корзине обновится
+
+- summary: |
+    Проверка очистки корзины
+  requirement: |
+    При очистке корзины все добавленные товары должны удалиться из заказа
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Выбираем несколько позиций товаров
+    - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
+    - переходим к корзину
+    - Нажимаем кнопку "Очистить корзину"
+  expected-result: |
+    Все выбранные товары были удалены из заказа
+
+- summary: |
+    Проверка оформления заказа на сайте
+  requirement: |
+    При успешном оформлении заказа получаем информацию о заказе и что с нами свяжется менеджер
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Выбираем несколько позиций товаров
+    - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
+    - переходим к корзину
+    - Нажимаем кнопку "Оформить заказ"
+  expected-result: |
+    Открывается модальное окно с информацией о том что с наш заказ оформлен и с нами свяжется менеджер для обсуждения условий оплаты 
+
+- summary: |
+    Проверка возможности продолжить покупки
+  requirement: |
+    При просмотре корзины есть возможность продолжить покупки для добавление товара к формирующемуся заказу в корзине
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Выбираем несколько позиций товаров
+    - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
+    - переходим к корзину
+    - Нажимаем кнопку "Продолжить покупки"
+    - Выбираем несколько позиций товаров
+    - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
+    - переходим к корзину
+  expected-result: |
+    К сформированому заказу в корзине добавились новые позиции товаров
+
+- summary: |
+    Проверка возврата к каталогу магазина
+  requirement: |
+    При просмотре карточки товара есть возможность вернуться в каталог магазина 
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Переходим в карточку товара
+    - Нажимаем кнопку "Магазин" в шапке сайта
+  expected-result: |
+    Открылся каталог магазина со всем ассортиментом товаров
