--- a/test-cases.yml
+++ b/test-cases.yml
@@ -176,3 +176,45 @@
     - Нажимаем кнопку "Магазин" в шапке сайта
   expected-result: |
     Открылся каталог магазина со всем ассортиментом товаров
+
+- summary: |
+    Проверка фильтрации по цене с отрицательным значением
+  requirement: |
+    При фильтрации товара по цене фильтр не должен принимать отрицательные значения 
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    цена от = 100 цена до = -1
+  steps:
+    - Вводим цену от
+    - Вводим цену до
+  expected-result: |
+    Фильтр не прошёл валидацию и появилось сообщение о том что выбран не верный формат числа для фильтра, фильтр не применился 
+
+- summary: |
+    Просмотр карточки товара
+  requirement: |
+    Есть возможность просматривать карточку товара, видеть подробную информацию
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Выбираем товар
+    - переходим в карточку товара
+  expected-result: |
+    Открывается страница с подробной информацией о товаре, его фото, название, цена, колличество на складе, подробное описание, есть возможность доавить товар в корзину для заказа
+
+- summary: |
+    Фильтрация товара по категориям
+  requirement: |
+    У покупателя есть возможность фильтровать товары в катологе по категориям
+  prerequisites: |
+    Открыта начальная страница сайта
+  test-data: |
+    no data
+  steps:
+    - Раскрываем выпадающий список категорий
+    - выбираем категорию "skincare"
+  expected-result: |
+    В каталоге отобразились товары попадающие под фильтр категории 
