--- a/test-cases.yml
+++ b/test-cases.yml
@@ -107,7 +107,7 @@
   steps:
     - Выбираем несколько позиций товаров
     - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
-    - переходим к корзину
+    - переходим в корзину
     - Нажимаем кнопку "Удалить" у любой позиции
   expected-result: |
     Выбранный товар удалится из корзины, список товаров в корзине обновится
@@ -123,7 +123,7 @@
   steps:
     - Выбираем несколько позиций товаров
     - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
-    - переходим к корзину
+    - переходим в корзину
     - Нажимаем кнопку "Очистить корзину"
   expected-result: |
     Все выбранные товары были удалены из заказа
@@ -139,7 +139,7 @@
   steps:
     - Выбираем несколько позиций товаров
     - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
-    - переходим к корзину
+    - переходим в корзину
     - Нажимаем кнопку "Оформить заказ"
   expected-result: |
     Открывается модальное окно с информацией о том что с наш заказ оформлен и с нами свяжется менеджер для обсуждения условий оплаты 
@@ -155,7 +155,7 @@
   steps:
     - Выбираем несколько позиций товаров
     - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
-    - переходим к корзину
+    - переходим в корзину
     - Нажимаем кнопку "Продолжить покупки"
     - Выбираем несколько позиций товаров
     - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
