regress-report.yml

--- a/regress-report.yml
+++ b/regress-report.yml
@@ -60,20 +60,4 @@ test-cases:
       Фильтрация товара по категориям
     status: pass
 
-bugreports:
-  - summary: |
-       Не происходит очистка корзины
-  environment: |
-    Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
-    OS Windows 10 Pro
-  steps-to-reproduce: |
-    1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
-    2. Доавить товар в корзину
-    3. Перейти в корзину
-    4. Нажать кнопку "Очистить козину"
-    5. Обновить страницу
-  expected-result: |
-    Ранее заказанные товары должны удалиться из корзины и не оторааться после оновления страницы
-  actual-result: |
-    сервер возвращает станицу с кодом 304, запрашиваемая пользователем страница не претерпела никаких изменения с момента его последнего посещения
-    
+bugreports: []
