--- a/test-cases.yml
+++ b/test-cases.yml
@@ -11,7 +11,7 @@
     - Открываем выпадающий список языков "Language" в правом верхнем углу шапки сайта
     - Выбираем язык "Russian"
   expected-result: |
-    Сайт должен отобразиться на Русской версии 
+    Происходит перевод сайта на выбранный язык 
 
 - summary: |
     Проверка фильтрации по ключевому слову
@@ -24,7 +24,7 @@
   steps:
     - В поле поиска вводим текст поиска
   expected-result: |
-    Сайт должен отфильтровать товар по поисковому запросу в выбранной категории и выдать позиции товара которые содержат поисковый запрос
+    отображаются товары в соответствии с поисковым запросом
 
 - summary: |
     Проверка фильтрации товара по бренду
@@ -37,7 +37,7 @@
   steps:
     - Выбираем бренд
   expected-result: |
-    Сайт должен отобразить все товары бренда
+    отображаются товары в соответствии с поисковым запросом
 
 - summary: |
     Проверка фильтрации товара по нескольким брендам
@@ -50,7 +50,7 @@
   steps:
     - Выбираем бренды
   expected-result: |
-    Сайт должен отобразить все товары бренда
+    отображаются товары в соответствии с поисковым запросом
 
 - summary: |
     Проверка фильтрации товара по ценовому диапазону
@@ -64,7 +64,7 @@
     - Вводим цену от
     - Вводим цену до
   expected-result: |
-    Сайт должен отобразить все товары в выбранном диапазоне значений цены в выбранной категории
+    Отображаются все товары в выбранном диапазоне значений цены в выбранной категории
 
 - summary: |
     Добавление товара в корзину
@@ -79,7 +79,7 @@
     - Нажимаем кнопку "В корзину"
     - Переходим в корзину
   expected-result: |
-    Добавленный товар должен отобразиться в корзине, должны увидеть название товара, колличество на складе, колличество добавленного товара, старую цену, кнопку "Удалить", новая цена
+    Выбранные товары добавлены в корзину
 
 - summary: |
     Добавление нескольких позиций товаров в корзину
@@ -94,7 +94,7 @@
     - Нажимаем кнопку "В корзину" для каждой из выбранной позиций
     - Переходим в корзину
   expected-result: |
-    Добавленный товар должен отобразиться в корзине, должны увидеть название товара, колличество на складе, колличество добавленного товара, старую цену, кнопку "Удалить", новая цена. Каждая позиция товара в новой строчке списка
+    Выбранные товары добавлены в корзину
 
 - summary: |
     Проверка удаления позиции товара в корзине
@@ -126,7 +126,7 @@
     - переходим в корзину
     - Нажимаем кнопку "Очистить корзину"
   expected-result: |
-    Все выбранные товары были удалены из заказа
+    Все товары удалены из корзины
 
 - summary: |
     Проверка оформления заказа на сайте
@@ -192,7 +192,7 @@
     Фильтр не прошёл валидацию и появилось сообщение о том что выбран не верный формат числа для фильтра, фильтр не применился 
 
 - summary: |
-    Просмотр карточки товара
+    Открытие карточки товара
   requirement: |
     Есть возможность просматривать карточку товара, видеть подробную информацию
   prerequisites: |
@@ -200,10 +200,10 @@
   test-data: |
     no data
   steps:
-    - Выбираем товар
-    - переходим в карточку товара
+    - Выбираем любой товар из каталога
+    - Нажимаем на товар
   expected-result: |
-    Открывается страница с подробной информацией о товаре, его фото, название, цена, колличество на складе, подробное описание, есть возможность доавить товар в корзину для заказа
+    Открывается страница с подробной информацией о выбранном товаре
 
 - summary: |
     Фильтрация товара по категориям
