--- a/bugreports.yml
+++ b/bugreports.yml
@@ -14,21 +14,7 @@
     screen3.jpg
 
 - summary: |
-    Фильтр цены до принимает отрицательные значения
-  environment: |
-    Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
-    OS Windows 10 Pro
-  steps-to-reproduce: |
-    1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
-    2. В фильтре Цена до ввести отрицательное число
-  expected-result: |
-    Каталог отобразит список товаров всех товаров категории независимо от того есть товар в наличии или нет
-  actual-result: |
-    Каталог не отображает позиции товаров
-    screen1.jpg
-
-- summary: |
-    Не происходит очистка корзины
+    После обновления страницы отобраатся удалленные товары
   environment: |
     Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
     OS Windows 10 Pro
