--- a/bugreports.yml
+++ b/bugreports.yml
@@ -8,13 +8,13 @@
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
     2. Нажать чекбокс фильтра "В наличии"
   expected-result: |
-    Каталог отобразит список товаров всех товаров категории независимо от того есть товар в наличии или нет
+    Каталог отобразит список всех товаров категории независимо от того есть товар в наличии или нет
   actual-result: |
     Каталог не отображает позиции товаров
     screen3.jpg
 
 - summary: |
-    После обновления страницы отобраатся удалленные товары
+    После обновления страницы отображаются удаленные товары
   environment: |
     Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
     OS Windows 10 Pro
@@ -29,3 +29,18 @@
   actual-result: |
     сервер возвращает станицу с кодом 304, запрашиваемая пользователем страница не претерпела никаких изменения с момента его последнего посещения
     screen4.jpg
+
+- summary: |
+    При оформлении заказа сервер не обрабатывает запрос
+  environment: |
+    Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
+    OS Windows 10 Pro
+  steps-to-reproduce: |
+    1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
+    2. Доавить товар в корзину
+    3. Перейти в корзину
+    4. Нажать кнопку "Оформить заказ"
+  expected-result: |
+    Сервер обрабатывает запрос на оформление заказа, заказ поступает в магазин
+  actual-result: |
+    сервер возвращает станицу со статусом 500
