--- a/test-cases.yml
+++ b/test-cases.yml
@@ -29,7 +29,7 @@
 - summary: |
     Проверка фильтрации товара по бренду
   requirement: |
-    При выборе бренда для фильтрации поиска сайт должен отобразить все товары бренда в выбранной категории
+    При выборе бренда для фильтрации поиска отображаются все товары бренда в выбранной категории
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -42,7 +42,7 @@
 - summary: |
     Проверка фильтрации товара по нескольким брендам
   requirement: |
-    При выборе нескольких рендов для фильтрации поиска сайт должен отобразить все товары брендов в выбранной категории
+    При выборе нескольких брендов для фильтрации поискаотображаются все товары брендов в выбранной категории
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -55,7 +55,7 @@
 - summary: |
     Проверка фильтрации товара по ценовому диапазону
   requirement: |
-    При установлении границ цены сайт должен отфильтровать все товары входящие в диапазон указанных значений в выбранной категории
+    При установлении границ цены отображаются все товары входящие в диапазон указанных значений в выбранной категории
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -69,7 +69,7 @@
 - summary: |
     Добавление товара в корзину
   requirement: |
-    При выборе товара товар должен добавляться в корзину 
+    При выборе товара товар добавляется в корзину 
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -84,7 +84,7 @@
 - summary: |
     Добавление нескольких позиций товаров в корзину
   requirement: |
-    При выборе нескольких позиций товара товар должен добавляться в корзину 
+    При выборе нескольких позиций товара товары добавляются в корзину 
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -99,7 +99,7 @@
 - summary: |
     Проверка удаления позиции товара в корзине
   requirement: |
-    При удалении позиции товара из корзины товар опропадёт из нашего заказа, а содержимое корзины обновится оставив только те товары которые остались в нашем заказе
+    При удалении позиции товара из корзины товар пропадёт из нашего заказа, а содержимое корзины обновится оставив только те товары, которые остались в нашем заказе
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -115,7 +115,7 @@
 - summary: |
     Проверка очистки корзины
   requirement: |
-    При очистке корзины все добавленные товары должны удалиться из заказа
+    При очистке корзины все добавленные товары удалятся из заказа
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -180,7 +180,7 @@
 - summary: |
     Проверка фильтрации по цене с отрицательным значением
   requirement: |
-    При фильтрации товара по цене фильтр не должен принимать отрицательные значения 
+    При фильтрации товара по цене фильтр не принимает отрицательные значения 
   prerequisites: |
     Открыта начальная страница сайта
   test-data: |
@@ -189,7 +189,7 @@
     - Вводим цену от
     - Вводим цену до
   expected-result: |
-    Фильтр не прошёл валидацию и появилось сообщение о том что выбран не верный формат числа для фильтра, фильтр не применился 
+    Фильтр не прошёл валидацию, отобразилось сообщение о том, что выбран не верный формат числа для фильтра, фильтр не применился 
 
 - summary: |
     Открытие карточки товара
