testing-report.yml

--- a/testing-report.yml
+++ b/testing-report.yml
@@ -19,11 +19,11 @@
   status: pass
 
 - summary: |
-    Добавление товара в корзину
+    Проверка добавления товара в корзину
   status: pass
 
 - summary: |
-    Добавление нескольких позиций товаров в корзину
+    Проверка добавления нескольких позиций товаров в корзину
   status: pass
 
 - summary: |
@@ -51,9 +51,9 @@
   status: fail
 
 - summary: |
-    Просмотр карточки товара
+    Проверка просмотра карточки товара
   status: pass
 
 - summary: |
-    Фильтрация товара по категориям
+    Проверка фильтрации товара по категориям
   status: pass
