regress-report.yml

--- a/regress-report.yml
+++ b/regress-report.yml
@@ -21,11 +21,11 @@ test-cases:
     status: pass
 
   - summary: |
-      Добавление товара в корзину
+      Проверка добавления товара в корзину
     status: pass
 
   - summary: |
-      Добавление нескольких позиций товаров в корзину
+      Проверка добавления нескольких позиций товаров в корзину
     status: pass
 
   - summary: |
@@ -53,11 +53,11 @@ test-cases:
     status: pass
 
   - summary: |
-      Просмотр карточки товара
+      Проверка просмотра карточки товара
     status: pass
 
   - summary: |
-      Фильтрация товара по категориям
+      Проверка фильтрации товара по категориям
     status: pass
 
 bugreports: []
