--- a/bugreports.yml
+++ b/bugreports.yml
@@ -44,3 +44,17 @@
     Сервер обрабатывает запрос на оформление заказа, заказ поступает в магазин
   actual-result: |
     сервер возвращает станицу со статусом 500
+
+- summary: |
+    Фильтрация по цене не учитывает скидку
+  environment: |
+    Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
+    OS Windows 10 Pro
+  steps-to-reproduce: |
+    1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
+    2. Установить значение фильтра цены от 470
+    3. Установить значение фильтра цены до 479
+  expected-result: |
+    Отображаются товары фильтру с актуальной ценой с учётом скидки 
+  actual-result: |
+    Фильтруется товар по старой цене без учёта скидки
