--- a/bugreports.yml
+++ b/bugreports.yml
@@ -46,15 +46,45 @@
     сервер возвращает станицу со статусом 500
 
 - summary: |
-    Фильтрация по цене не учитывает скидку
+    Не работает кнопка "Х" на странице корзины
   environment: |
     Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
     OS Windows 10 Pro
   steps-to-reproduce: |
     1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
-    2. Установить значение фильтра цены от 470
-    3. Установить значение фильтра цены до 479
+    2. Выбираем товар
+    3. Нажимаем "Добавить в корзину"
+    4. Переходим в корзину
+    5. Нажимаем кнопку "Оформить заказ"
+    6. Нажимаем кнопку "X"
   expected-result: |
-    Отображаются товары фильтру с актуальной ценой с учётом скидки 
+    Нажатие кнопки "X" закрывает модальное окно "Заказ успешно оформлен"
+  actual-result: |
+    Модальное окно "Заказ успешно оформлен" не реагирует на нажатие кнопки "Х"
+
+- summary: |
+    Фильтрация товара по цене без учёта скидки
+  environment: |
+    Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
+    OS Windows 10 Pro
+  steps-to-reproduce: |
+    1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
+    2. Установить значение фильтра цены "До" = 12
+  expected-result: |
+    Фильтрация товара по цене происходит с учётом скидки, ожидаемые результаты фильтрации "perfume oil", "Fog Scent Xpressio Perfume", "Tree oil 30ml", "Elbow Macaroni - 400 gm"
   actual-result: |
     Фильтруется товар по старой цене без учёта скидки
+
+- summary: |
+    Каталог пустой при отключении фильтра "В наличии"
+  environment: |
+    Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
+    OS Windows 10 Pro
+  steps-to-reproduce: |
+    1. Зайти на страницу магазина https://hexlet-products-store.vercel.app/
+    2. Перейти в карточку товара "Microsoft Surface Laptop 4"
+    3. Нажать тег "#laptops"
+  expected-result: |
+    При нажатии на хештег открывается каталог сайта с результатом фильтрации товара по категории тега
+  actual-result: |
+    Ничего не происходит
