--- a/bugreports.yml
+++ b/bugreports.yml
@@ -76,7 +76,7 @@
     Фильтруется товар по старой цене без учёта скидки
 
 - summary: |
-    Каталог пустой при отключении фильтра "В наличии"
+    Не работает фильтрация по категориям из карточки товара
   environment: |
     Google Chrome Версия 114.0.5735.199 (Официальная сборка), (64 бит)
     OS Windows 10 Pro
